--- a/package.json
+++ b/package.json
@@ -9,10 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^2.1.1",
-    "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
@@ -22,32 +18,23 @@
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
-    "@types/react-router": "^5.1.20",
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "critters": "^0.0.23",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "framer-motion": "^11.2.11",
-    "i": "^0.3.7",
-    "lenis": "^1.1.4",
-    "locomotive-scroll": "^5.0.0-beta.13",
     "lucide-react": "^0.395.0",
     "next": "^14.2.4",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-element-to-jsx-string": "^15.0.0",
     "react-icons": "^5.2.1",
-    "react-scroll": "^1.9.0",
     "react-use-measure": "^2.1.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2"
-  },
-  "devDependencies": {
-    "@types/locomotive-scroll": "^4.1.3",
-    "@types/react-scroll": "^1.8.10"
   }
 }
