--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@vercel/analytics": "^1.5.0",
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -32,6 +33,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^5.2.1",
     "react-use-measure": "^2.1.1",
+    "sharp": "^0.34.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
